[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "certwrangler"
readme = "README.md"
requires-python = ">=3.10,<3.14" # Some tests are failing on 3.14, limit for now.
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dynamic = [ "version" ]
dependencies = [
  "acme>=3.3",
  "click>=8.2",
  "dns-lexicon>=3.20.1",
  "dnspython>=2.7",
  "edgegrid-python>=2",
  "hvac>=2.3",
  "importlib-metadata>=8.6.1",
  "prometheus-client>=0.21.1",
  "pydantic[email]>=2.11.1",
  "pyyaml>=6.0.2",
  "starlette>=1.0.1",
  "uvicorn>=0.34",
]

urls.Documentation = "https://linode.github.io/certwrangler"
urls.Homepage = "https://github.com/linode/certwrangler"
urls.Repository = "https://github.com/linode/certwrangler.git"

scripts.certwrangler = "certwrangler.shell:main"

entry-points."certwrangler.solver".dummy = "certwrangler.solvers.dummy:DummySolver"
entry-points."certwrangler.solver".edgedns = "certwrangler.solvers.edgedns:EdgeDNSSolver"
entry-points."certwrangler.solver".lexicon = "certwrangler.solvers.lexicon:LexiconSolver"

entry-points."certwrangler.state_manager".dummy = "certwrangler.state_managers.dummy:DummyStateManager"
entry-points."certwrangler.state_manager".local = "certwrangler.state_managers.local:LocalStateManager"

entry-points."certwrangler.store".dummy = "certwrangler.stores.dummy:DummyStore"
entry-points."certwrangler.store".local = "certwrangler.stores.local:LocalStore"
entry-points."certwrangler.store".vault = "certwrangler.stores.vault:VaultStore"

[dependency-groups]
dev = [
  "ipython",
  "ruff",
]
docs = [
  "autodoc-pydantic[erdantic]",
  "myst-parser",
  "sphinx",
  "sphinx-book-theme",
  "sphinx-click",
  "sphinx-copybutton",
  "sphinx-togglebutton",
  "sphinxcontrib-apidoc",
]
docs-auto = [
  "sphinx-autobuild",
]
gha-update = [
  "gha-update; python_full_version>='3.12'",
]
pre-commit = [
  "pre-commit",
  "pre-commit-uv",
]
tests = [
  "coverage",
  "ipython",
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "requests-mock",
]
tox = [
  "tox",
  "tox-uv",
]
typing = [
  "ipython",
  "mypy",
  "types-pyyaml",
  "types-requests",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
  "/docs",
  "/src",
  "/tests",
  ".pre-commit-config.yaml",
  "certwrangler.example.yaml",
  "uv.lock",
]

[tool.ruff]
src = [ "src" ]
fix = true
show-fixes = true
output-format = "full"

lint.select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle error
  "F",   # pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  # TODO: enable after dropping python 3.9 in a new PR.
  # "UP",  # pyupgrade
  "W", # pycodestyle warning
]
lint.ignore = [ "E501" ]

[tool.pyproject-fmt]
max_supported_python = "3.13"
table_format = "long"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = [
  "src",
]

[tool.coverage.report]
include = [
  "src/*",
]
show_missing = true
skip_covered = true

[tool.tox]
env_list = [
  "py3.13",
  "py3.12",
  "py3.11",
  "py3.10",
  "style",
  "typing",
]

[tool.tox.env.docs]
description = "Build docs"
dependency_groups = [ "docs" ]
commands = [ [ "sphinx-build", "-E", "-b", "html", "docs/source", "docs/build/html" ] ]

[tool.tox.env.docs-auto]
description = "Continuously rebuild docs and start a local server"
dependency_groups = [ "docs", "docs-auto" ]
commands = [ [ "sphinx-autobuild", "-E", "-b", "html", "--watch", "src", "docs/source", "docs/build/html" ] ]

[tool.tox.env.style]
description = "Run all pre-commit hooks on all files"
dependency_groups = [ "pre-commit" ]
skip_install = true
commands = [ [ "pre-commit", "run", "--all-files", "--show-diff-on-failure" ] ]

[tool.tox.env.typing]
description = "Run static type checkers"
dependency_groups = [ "typing" ]
skip_install = true
commands = [ [ "mypy" ] ]

[tool.tox.env.update-actions]
description = "update GitHub Actions pins"
skip_install = true
dependency_groups = [ "gha-update" ]
commands = [ [ "gha-update" ] ]
labels = [ "update" ]

[tool.tox.env.update-pre_commit]
description = "update pre-commit pins"
skip_install = true
dependency_groups = [ "pre-commit" ]
commands = [ [ "pre-commit", "autoupdate", "--freeze", "-j4" ] ]
labels = [ "update" ]

[tool.tox.env.update-requirements]
description = "update uv lock"
skip_install = true
dependency_groups = [  ]
commands = [ [ "uv", "lock", { replace = "posargs", default = [ "-U" ], extend = true } ] ]
labels = [ "update" ]
no_default_groups = true

[tool.tox.env_run_base]
description = "Run unit tests and generate coverage report"
runner = "uv-venv-lock-runner"
dependency_groups = [ "tests" ]
commands = [
  [ "coverage", "run", "-m", "pytest", "-vv", "tests/" ],
  [ "coverage", "report", "-m" ],
]

[tool.mypy]
files = [
  "src/certwrangler",
]
exclude = [
  "tests/",
]
plugins = [
  "pydantic.mypy",
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.uv]
default-groups = [ "dev", "pre-commit", "tox" ]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
